[package]
name = "ttf-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
roots = "0.0.8"
# sdl2 = { version = "0.35.2", default-features = false, features = ["bundled"] }
sdl2 = "0.35.2"
ttf-parser = "0.18.1"
vector2d = "2.2.0"
